<resources>
    <string name="app_name">HHU课程表</string>
    <string name="app_version">1.0.0</string>


    <string name="github_lib">com.zhuangfei.timetable
        \ncn.carbswang.android:NumberPickerView
        \ncom.github.GrenderG:Toasty
        \nAIschedule-HHU-URP
        \ncom.google.code.gson:gson
    </string>

    <string name="github">https://github.com/yuchenii/HHUClassSchedule</string>
    <string name="yuchenii">https://github.com/yuchenii</string>
    <string name="chlcoder">https://github.com/Chl-coder</string>
    <string name="xuanipvp">https://github.com/xuanipvp</string>
    <string name="cqg">https://github.com/yuchenii</string>
    <string name="fudi2000">https://github.com/Fudi2000</string>
    <string name="scandy316">https://github.com/Scandy316</string>
    <string name="hhuzyp">https://github.com/HHU-ZYP</string>


    <string name="icon_location" translatable="false"></string>
    <string name="icon_back" translatable="false"></string>
    <string name="icon_send" translatable="false"></string>
    <string name="icon_share" translatable="false"></string>
    <string name="icon_more" translatable="false"></string>
    <string name="icon_close" translatable="false"></string>
    <string name="icon_heart" translatable="false"></string>
    <string name="icon_date" translatable="false"></string>
    <string name="icon_delete" translatable="false"></string>
    <string name="icon_upload" translatable="false"></string>
    <string name="icon_clock" translatable="false"></string>
    <string name="icon_setting" translatable="false"></string>
    <string name="icon_search" translatable="false"></string>
    <string name="icon_info" translatable="false"></string>
    <string name="icon_refresh" translatable="false"></string>
    <string name="icon_add" translatable="false"></string>
    <string name="icon_done" translatable="false"></string>
    <string name="icon_doc" translatable="false"></string>
    <string name="icon_msg" translatable="false"></string>
    <string name="icon_download" translatable="false"></string>
    <string name="icon_star" translatable="false"></string>
    <string name="icon_person" translatable="false"></string>
    <string name="icon_nav" translatable="false"></string>
    <string name="icon_color" translatable="false"></string>
    <string name="icon_edit" translatable="false"></string>

</resources>