<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f3f3f3"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="140dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_version"
                    android:textSize="12sp"
                    android:textColor="@color/app_gray7" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="-120dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="Github开源"
                android:textColor="@color/app_gray7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/github"
                    android:textColor="@color/black"
                    android:textIsSelectable="true" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="开发者"
                android:textColor="@color/app_gray7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/iconfont"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/icon_person"
                        android:textColor="#16AD9F"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_yuchenii"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="yuchenii"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/iconfont"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/icon_person"
                        android:textColor="#16AD9F"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_chlcoder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="Chl-coder"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/iconfont"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/icon_person"
                        android:textColor="#16AD9F"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_xuanipvp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="xuanipvp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/iconfont"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/icon_person"
                        android:textColor="#16AD9F"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_fudi2000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="Fudi2000"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/iconfont"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/icon_person"
                        android:textColor="#16AD9F"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_hhuzyp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="HHU-ZYP"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/iconfont"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/icon_person"
                        android:textColor="#16AD9F"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_scandy316"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="Scandy316"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="感谢以下开源项目"
                android:textColor="@color/app_gray7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/github_lib"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

